Add pagination, filtering, specification and improved API response structure