@@ -1,30 +1,48 @@
 package com.example.movieapp.service;
 
 
+import com.example.movieapp.dto.dtorequest.MovieFilterDto;
 import com.example.movieapp.dto.dtorequest.MovieRequest;
 import com.example.movieapp.dto.dtoresponse.MovieResponse;
+import com.example.movieapp.dto.dtoresponse.PageResponse;
 import com.example.movieapp.exception.ResourceNotFoundException;
 import com.example.movieapp.model.Genre;
 import com.example.movieapp.model.Movie;
+import com.example.movieapp.model.MovieSpecification;
 import com.example.movieapp.repository.MovieRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
+
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
 public class MovieService {
 
     private final MovieRepository movieRepository;
+    public PageResponse<MovieResponse> getAllMovies(MovieFilterDto filterDto, Pageable pageable) {
+        Page<Movie> movies = movieRepository.findAll(MovieSpecification.filterMovies(filterDto), pageable);
 
-    // butun
-    public List<MovieResponse> getAllMovies() {
-        return movieRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        // Page -> PagedResponse dönüşümü
+        PageResponse<MovieResponse> response = new PageResponse<>();
+        response.setPage(movies.getNumber());
+        response.setSize(movies.getSize());
+        response.setTotalPagesCount(movies.getTotalPages());
+        response.setTotalElementsCount(movies.getTotalElements());
+        response.setItems(movies.map(this::mapToResponse).getContent());
+
+        return response;
     }
+
+
 
     // ID
     public MovieResponse getMovieById(Long id) {
@@ -33,11 +51,11 @@ public class MovieService {
         return mapToResponse(movie);
     }
 
-    // Genre'ye
-    public List<MovieResponse> getMoviesByGenre(Genre genre) {
-        return movieRepository.findByGenre(genre).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+    // Genreler
+    public List<String> getAllGenres() {
+        return Arrays.stream(Genre.values())
+                .map(Enum::name)
+                .toList();
     }
 
     // title
@@ -49,7 +67,12 @@ public class MovieService {
 
     // Yeni
     public MovieResponse createMovie(MovieRequest request) {
-        Movie movie = new Movie(request.getTitle(), request.getGenre());
+        Movie movie = new Movie(
+                request.getTitle(),
+                request.getGenre(),
+                request.getYear(),
+                request.getRating()
+        );
         Movie savedMovie = movieRepository.save(movie);
         return mapToResponse(savedMovie);
     }
@@ -78,6 +101,8 @@ public class MovieService {
                 movie.getId(),
                 movie.getTitle(),
                 movie.getGenre().name()
+                , movie.getYear(),
+                movie.getRating()
         );
     }
 }
